# fastapi-template

./: .gitignore  README.md  docker-compose.yml  setup.py
.github/workflows/: test.yml
backend/: main.py  pyproject.toml
backend/api/: api.py
backend/core/: config.py
backend/crud/: __init__.py  crud_base.py  crud_item.py
backend/db/: __init__.py  base.py  base_class.py  init_db.py  session.py
backend/models/: __init__.py  item.py
backend/routers/: __init__.py  item.py  util.py
backend/schemas/: __init__.py  item.py
backend/tests/: conftest.py
backend/tests/crud/: test_item_crud.py
backend/tests/routers/: test_item_router.py
backend/tests/utils/: utils.py
